# 2025_20675160

./: .gitignore  CMakeLists.txt  README.md  ReadME.md  adder_8h.html  adder_8h_source.html  files.html  git-cheat-sheet.txt  globals.html  globals_func.html  hi and date.cmd  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: doxygen-deploy.yml
WorkSheet3/: calc.cpp  setup.txt
WorkSheet3/adderstatic/include/: adder.h
WorkSheet3/adderstatic/lib/: libadder.lib
Worksheet4/Calc/: CMakeLists.txt  adder.h  calc.cpp
Worksheet5/: Doxyfile  adder.h
Worksheet6/Worksheet6App/: .gitignore  CMakeLists.txt  ModelPart.h  ModelPartList.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui
Worksheet7/Exercise1/: CMakeLists.txt  CylinderExample.cxx
Worksheet7/Exercise3/Worksheet6App/: CMakeLists.txt  ModelPartList.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Worksheet7/Exercise4/Worksheet6App/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.h  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui
